--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Ex4</string>
+    <string name="ip_text">IP:</string>
+    <string name="port_text">PORT:</string>
+
 </resources>
